@@ -6,7 +6,7 @@ This document describes how to build the application and platform binaries.
 
 Download and install the following software packages:
 
-* [JDK 16](https://bell-sw.com/pages/downloads/?version=java-16) (Full JDK + JavaFX)
+* [JDK 17](https://bell-sw.com/pages/downloads/?version=java-17) (Full JDK + JavaFX)
 * [Gradle 7.2](https://gradle.org/releases)
 * [Git 2.33](https://git-scm.com/downloads)
 
@@ -51,20 +51,6 @@ Complete the following steps to import the application:
 1. Click **Finish**.
 
 The project is imported into the IDE.
-
-### Configure
-
-Before running the application, add the permissive access option as follows:
-
-1. Open **Launcher.java**.
-1. Click the arrow beside the `Launcher` class.
-1. Click **Modify Run Configuration**.
-1. Click **Modify options**.
-1. Click **Add VM options**.
-1. Set **VM options** to: `--illegal-access=permit`
-1. Click **OK**.
-
-The run settings are configured.
 
 ### Run
 
